--- a/src/app/pages/draw-anatomye/draw-anatomye.page.scss
+++ b/src/app/pages/draw-anatomye/draw-anatomye.page.scss
@@ -1,9 +1,28 @@
 ion-content {
     --background:#F5F5F8;
 }
+ion-icon {
+    color: black;
+    font-size: 13px;
+  }
+
+#inicio{
+    background-color: white;
+    box-shadow: 0px 4px 20px 4px rgba(0, 0, 0, 0.25);
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+#titulo{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 40px;
+    }
 #imgAnatomia{
     margin-top:15px;
-    margin-left: 0px;
+    margin-left: 10px;
     z-index: -3;
 }
 
@@ -61,10 +80,10 @@ h2{
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 50%;
-    font-size:17px;
+    width: 40%;
+    font-size:15px;
     color: gray;
-    
+    text-align: center;
 }
 
 ion-card{
