--- a/src/app/pages/fullsymptomss/fullsymptomss.page.html
+++ b/src/app/pages/fullsymptomss/fullsymptomss.page.html
@@ -1,12 +1,18 @@
-<ion-content>
-  <ion-header collapse="condense">
-  </ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref='/tabs' style="color:black" text=""> </ion-back-button>
-      <h3>Linea sintomatologica</h3>
-   </ion-buttons>
-  </ion-toolbar>
+<ion-toolbar>
+  <ion-buttons slot="start">
+    <ion-back-button defaultHref='/tab1' style="color:black" text=""></ion-back-button>
+ </ion-buttons>
+</ion-toolbar>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense" style="--background-color: white;">
+  </ion-header> 
+  <div>
+      <ion-item id="inicio"  lines="none" style="--background:white; text-align: center;">
+        <ion-title id="titulo">
+          <ion-label>Línea Sintomatológica</ion-label>
+        </ion-title>
+      </ion-item>
+  </div>
   <ion-grid>
     <div>
       <ion-item *ngFor="let item of dataSymptons;let i = index"  lines="full"(click)="clickToChange()">
