--- a/src/app/pages/log-one/log-one.page.scss
+++ b/src/app/pages/log-one/log-one.page.scss
@@ -2,7 +2,8 @@ ion-content{
 --background:#F5F5F8;
 }
 #forms{
-    margin-bottom: 10%;
+    margin-top: -4%;
+    margin-bottom: 2%;
     padding:30px;
 }
 #buttonI{
@@ -15,9 +16,10 @@ ion-content{
     margin-top: 5%;
     --background:#F5F5F8;
     border-radius: 30px;
+    margin-bottom: 20px;
 }
 .label{
-    font-size: 12px;
+    font-size: 15px;
     color: gray;
 }
 .password_forgot{
@@ -26,5 +28,6 @@ ion-content{
     ion-button{
       font-size: 12px;
       color: #0A4296;
+      margin-top: -5px;
     }
   }
