--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,6 +1,9 @@
 ion-content {
   --background:#F5F5F8;
 }
+p{
+  font-size: 16px;
+}
   ion-card{
     background-color: transparent !important;
     padding: 0 !important;
@@ -13,7 +16,7 @@ ion-content {
     margin-bottom: 5px;
     border: 20px solid #FFFFFF;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
-} 
+}
   ion-card-title{
     margin-top: 30px;
     font-size: 20px;
