--- a/src/app/pages/proceso-completo/proceso-completo.page.scss
+++ b/src/app/pages/proceso-completo/proceso-completo.page.scss
@@ -1,3 +1,21 @@
+ion-content {
+    --background:#F5F5F8;
+}
+
+#inicio{
+    background-color: white;
+    box-shadow: 0px 4px 20px 4px rgba(0, 0, 0, 0.25);
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+#titulo{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 40px;
+    }
 h2{
     font-size: 15px;
     margin-left: 1rem;
