--- a/src/app/pages/reporte-fechas/reporte-fechas.page.scss
+++ b/src/app/pages/reporte-fechas/reporte-fechas.page.scss
@@ -1,14 +1,33 @@
+ion-content {
+    --background:#F5F5F8;
+}
 
+#inicio{
+    background-color: white;
+    box-shadow: 0px 4px 20px 4px rgba(0, 0, 0, 0.25);
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+#titulo{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 40px;
+    }
 .items{
-    margin-left: 20vw;
+    margin-left: 6vw;
     margin-top: 2rem;
-    border: solid 0.5px #E6E6E6;
-    width: 170px;
+    width: 300px;
     height: 69px;
 }
 #buttonI{
-    margin-left: 25vw;
-    margin-top: 3rem;
+    margin-top: 400px;
+    width:50%;
+    height: 58px;
+    margin-left:25%;
+    margin-right:25%;
    
 }
 #titulo2{
