--- a/src/app/pages/carga/carga.page.html
+++ b/src/app/pages/carga/carga.page.html
@@ -33,5 +33,8 @@
     <ion-item lines= none style="--background: #F5F5F8; margin-top: 10px; text-align: center;font-size: 12px; color:#82799D;margin-top: -10px">
     <ion-label>Grupo de investigación VERITAS AID</ion-label>
   </ion-item>
+  <ion-item lines= none style="--background: #F5F5F8; margin-top: 10px; text-align: center;font-size: 12px; color:#82799D;margin-top: -10px">
+    <ion-label>Grupo de investigación CRESER</ion-label>
+    </ion-item>
 </ion-grid>
 <ion-progress-bar type="indeterminate"></ion-progress-bar>
